# MyBittorrentDownloader

./: BitTorrentMessage.h  CMakeLists.txt  OneFileTorrentPaser.h  Peer.h  PieceManager.h  README.md  SockList.h  Tracker.h  main.cpp  paser_test.cpp  utils.h
inputs/: Dataset_BUSI.zip.torrent  DukeMTMC-reID.zip.torrent  LC25000.zip.torrent  Market-1501-v15.09.15.zip.torrent
lib/: CMakeLists.txt
lib/bencoding/: BDictionary.cpp  BList.cpp  BList.h  CMakeLists.txt  Decoder.h
src/: CMakeLists.txt  OneFileTorrentPaser.cpp  OneFileTorrentPaser.h  Peer.h  PieceManager.h  Tracker.cpp  Tracker.h  utils.cpp  utils.h
unit_tests/: CMakeLists.txt  main.cpp  paser_test.cpp  tracker_test.cpp
